# semantic-frame-extractor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TUI_PROGRESS.md  install_pytorch.sh  main.py  pyproject.toml
extractor/: __init__.py  matcher.py  modes.py  tui.py  video.py
extractor/matchers/: __init__.py  base.py  chat_api.py  embedding.py  generation.py  transformers_embedding.py
